cabal-version:       >=1.10

name:                accompll
version:             0.1.0.0
synopsis:            AC-completion for left-linear TRSs
author:              Johannes Niederhauser
build-type:          Simple
                     
executable accompll
  main-is:             Main.hs
  build-depends:       base >=4.13
                     , term-rewriting >= 0.4
                     , containers >= 0.6
                     , optparse-applicative >= 0.17
                     , process >= 1.2
                     , async >= 2.2
                     , ansi-wl-pprint >= 0.6
                     , split >= 0.2
                     , parsec >= 3.1
  hs-source-dirs:      src
  other-modules:       ParseUtils
                     , Utils
                     , Rewriting
                     , UtilsAC
                     , MatchingAC
                     , RewritingAC
                     , TTInterface
                     , Completion
  default-language:    Haskell2010
  ghc-options:       -O2 -threaded -with-rtsopts=-N3
